# My-Operating-System-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md
boot/: limine.conf
docs/: PRD.md  architecture.md  build-guide.md  milestones.md
kernel/: kernel_main.cpp  linker.ld
kernel/arch/x86_64/: gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  isr_stubs.asm
kernel/drivers/: framebuffer.cpp  framebuffer.hpp  keyboard.cpp  keyboard.hpp  pic.cpp  pic.hpp  pit.cpp  pit.hpp
kernel/fs/: vfs.cpp  vfs.hpp
kernel/lib/: panic.cpp  panic.hpp
kernel/mm/: heap.cpp  heap.hpp  pmm.cpp  pmm.hpp
kernel/sched/: context_switch.asm  scheduler.cpp  scheduler.hpp  task.hpp
kernel/shell/: shell.cpp  shell.hpp
scripts/: build.ps1  run-qemu.ps1
toolchain/: setup-toolchain.ps1
